# wtf

./: .gitignore  LICENSE  README.md  pyproject.toml
wtf/: corrector.py  main.py
wtf/llms/: openai.py
wtf/shell/: get_command.py  get_error.py
wtf/utils/: models.py  prompt.py
